<resources>
    <string name="techTeamId">991</string>
    <string name="managementTeamId">992</string>
    <string name="aboutFragmentId">993</string>

    <string name="app_name">DSC-NIE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="good_string">Good</string>
    <string name="morning_string">Morning</string>
    <string name="afternoon_string">Afternoon</string>
    <string name="evening_string">Evening</string>
    <string name="creativity_lead">CREATIVITY LEAD</string>
    <string name="editorial_lead">EDITORIAL LEAD</string>
    <string name="outreach_lead">OUTREACH LEAD</string>
    <string name="events_lead">EVENTS LEAD</string>
    <string name="design_lead">DESIGN LEAD</string>
    <string name="marketing_lead">MARKETING LEAD</string>
    <string name="management_lead">MANAGEMENT LEAD</string>
    <string name="dsc_lead">DSC NIE LEAD</string>
    <string name="web_dev_lead_lead">WEB DEV LEAD</string>
    <string name="technical_lead">TECHNICAL LEAD</string>
    <string name="technical_advisor">TECHNICAL ADVISOR</string>
    <string name="android_lead">ANDROID LEAD</string>
    <string name="ml_lead">ML LEAD</string>
    <string name="microcontrollers_lead">MICROCONTROLLERS LEAD</string>

    <string name="aditi">Aditi Narayan</string>
    <string name="aditi_year">3rd year, ECE</string>
    <string name="deepthi">Deepthi Nanjunda\n2nd year, ISE</string>
    <string name="dharitri">Dharitri M\n3rd year, CSE</string>
    <string name="divya">Divya Choudhary\n3rd year, ISE</string>
    <string name="lohith">Lohith DS\n4th year, ECE</string>
    <string name="prabhajana">Prabhajana SK\n3rd year, ECE</string>
    <string name="pulkit">Pulkit Singh\n3rd year, CSE</string>
    <string name="sathwik">Sathwik Bharadwaj\n2nd year, MEC</string>
    <string name="shriyank">Shriyank Pandey\n3rd year, CSE</string>
    <string name="tulsi">Tulsi M\n3th year, ECE</string>
    <string name="raghav">Raghav Kaushal\n2nd year, CSE</string>
    <string name="rishabh">Rishabh Singhvi</string>
    <string name="rishabh_year">3rd year, CSE</string>
    <string name="sanskar">Sanskar Agarwal</string>
    <string name="sanskar_year">3rd year, CSE</string>
    <string name="pranav">Pranav B</string>
    <string name="pranav_year">2nd year, CSE</string>
    <string name="tanmoy">Tanmoy Mazumdar</string>
    <string name="tanmoy_year">2nd year, ISE</string>
    <string name="iresh">Iresh Sharma</string>
    <string name="iresh_year">2nd year, CSE</string>
    <string name="aditya">Aditya Gupta</string>
    <string name="aditya_year">2nd year, ISE</string>
    <string name="harsh">Harsh Vardhan</string>
    <string name="harsh_year">3rd year, CSE</string>
    <string name="shujan">Shujan Pannag</string>
    <string name="shujan_year">3rd year, ECE</string>
    <string name="pratyusha">Pratyusha R</string>
    <string name="pratyusha_year">3rd year, ECE</string>


    <string name="description"> We, Developer Student Clubs are initiative taken by Google Developers taken to bridge the gap between theory and application. DSC started in India in 2017 and now our community spreads across the whole Globe.\n\nAt a base level, we are university-based community groups for students interested in Google developer technologies. Students from all undergraduate or graduate programs with an interest in growing as a developer are welcome. By joining a DSC, students grow their knowledge in a peer-to-peer learning environment and build solutions for local businesses and their community.\n\n
We host many hands-on-workshops, boot camps, study jams to make you technically inclined. To do so we are equipped with the massive community who constantly collaborate and resources handful curated by Google, so you don’t have to have second thoughts on the quality of the content delivered from us.
We are not just a club; we are a community!\n\nWe look for real-world problems and try to build products on it with the help of technology, which would help our community a better place to live in.
So come join us on this amazing journey!\n\nWe are new so we have the fresh scent everyone requires!</string>
    <string name="discord_description">DiscordImage</string>
    <string name="dsc_logo_description">dsc nie logo</string>
    <string name="instagram_description">Instagram Image</string>
    <string name="twitter_description">twitter image</string>
    <string name="linkedin_description">linkedin image</string>
    <string name="fvaegvev_com">fvaegvev.com</string>
    <string name="adityaDescription">A potterhead and greek mythology enthusiast who mainly programs in Java and has recently ventured out into Python. Is trying out ML to see what all the fuss is about and he might actually ❤ it. Likes solving problems on hackerrank. Currently an undergrad@NIE who loves to develop android applications.</string>
    <string name="aditya_email">mailto:4ni19is007_a@nie.ac.in</string>
    <string name="aditya_linkedin">https://www.linkedin.com/in/adityagupta985/</string>
    <string name="aditya_instagram">https://www.instagram.com/adi.tya_._/</string>
    <string name="categoryitemimage">categoryItemImage</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="log_in">Log in</string>
    <string name="codeimage">codeImage</string>
    <string name="sign_up">Sign up</string>
    <string name="register"><u>Register</u></string>
    <string name="name_hint">Name</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="usn_hint">USN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>
    <string name="register_without_underline">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="location">LOCATION</string>
    <string name="date">DATE</string>
    <string name="event_details" />
    <string name="event__details">EVENT DETAILS</string>
    <string name="dsc_instagram_link"><a href='https://instagram.com/dscnie_mys'>Instagram</a></string>
    <string name="dsc_linkedin_link"><a href='https://www.linkedin.com/in/dsc-nie-mysore-95a3191b7/'>Linkedin</a></string>
    <string name="dsc_discord_link"><a href='https://discord.gg/auxcKjZCdZ'>Discord</a></string>
    <string name="dsc_twitter_link"><a href='https://twitter.com/DscNie'>Twitter</a></string>
    <string name="core_image_description">core_image</string>
    <string name="instagram_image">instagram_image</string>
    <string name="linkedin_image">linkedin_image</string>
    <string name="email_image">email_image</string>
    <string name="more">more</string>
    <string name="content_description_more">more_content</string>
    <string name="content_description_favorite">favorite</string>
    <string name="favorite">favorite</string>

    //Login-SignUp page stuff
    <string name="dsc_logo_content_description">Google Developers Logo</string>
    <string name="dsc_hint_username">Username</string>
    <string name="dsc_hint_password">Password</string>
    <string name="dsc_button_next">NEXT</string>
    <string name="dsc_button_cancel">CANCEL</string>
    <string name="dsc_error_password">Password must contain at least 8 characters.</string>
    <string name="dsc_error_passwords_dont_match">Passwords don\'t match</string>
    <string name="dsc_sign_out">Sign Out</string>

    //Home toolbar stuff
    <string name="dsc_app_name">DSC NIE</string>
    <string name="dsc_filter_title">Filter</string>
    <string name="dsc_search_title">Search</string>

    //backdrop stuff
    <string name="dsc_about_us">About Us</string>
    <string name="dsc_leaderboard">Leaderboard</string>
    <string name="dsc_tech_team">Meet the Tech team</string>
    <string name="dsc_management_team">Meet the Management team</string>
    <string name="dsc_past_events">Past Events</string>
    <string name="dsc_account_label">My Account</string>
    <string name="shr_logo_content_description">Shrine Logo</string>

    //motion stuff
    <string name="email_card_transition_name">email_card</string>
    <string name="email_card_detail_transition_name">email_card_detail</string>


</resources>