<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.DSCNIE.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dsc_about_us" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.DSCNIE.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dsc_tech_team" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.DSCNIE.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dsc_management_team" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.DSCNIE.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dsc_past_events" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.DSCNIE.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dsc_leaderboard" />


    <View
        android:layout_width="56dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="?android:attr/textColorPrimary" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.DSCNIE.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dsc_account_label" />

</merge>