<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loginPageBackgroundColor"
        tools:context=".login_signup.login_material_fragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:orientation="vertical"
            android:clipToPadding="false"
            android:padding="24dp"
            android:paddingTop="16dp">

            <ImageView
                android:layout_width="192dp"
                android:layout_height="192dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_google_developers"
                android:contentDescription="@string/dsc_logo_content_description" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                style="@style/Widget.DSCNIE.TextInputLayout"

                android:hint="@string/dsc_hint_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input"
                style="@style/Widget.DSCNIE.TextInputLayout"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:errorEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:passwordToggleEnabled="true"
                android:hint="@string/dsc_hint_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/next_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    style="@style/Widget.DSCNIE.Button"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:text="@string/dsc_button_next" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    style="@style/Widget.DSCNIE.Button.TextButton"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:textColor="@color/colorPrimaryDarkVarient"
                    android:layout_marginRight="12dp"
                    android:layout_toStartOf="@id/next_button"
                    android:layout_toLeftOf="@id/next_button"
                    android:text="@string/dsc_button_cancel" />

            </RelativeLayout>
        </LinearLayout>


    </ScrollView>
</layout>